# sqldf

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
sqldf/: __init__.py  parser.py  sql.gram  sqldf.py  test.py
tests/: test_sqldf.py
