[tool.poetry]
name = "sqldf"
version = "0.3.0"
description = ""
authors = ["Daniel Underwood <git@danielunderwood.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pegen = "^0.1.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
